# proto/gen/api/v1/instance_service_grpc.pb.go
@@ -11,6 +11,7 @@ import (
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
 	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
 )
 
 // This is a compile-time assertion to ensure that this generated file
@@ -22,6 +23,9 @@ const (
 	InstanceService_GetInstanceProfile_FullMethodName    = "/memos.api.v1.InstanceService/GetInstanceProfile"
 	InstanceService_GetInstanceSetting_FullMethodName    = "/memos.api.v1.InstanceService/GetInstanceSetting"
 	InstanceService_UpdateInstanceSetting_FullMethodName = "/memos.api.v1.InstanceService/UpdateInstanceSetting"
+	InstanceService_UploadCoverImage_FullMethodName      = "/memos.api.v1.InstanceService/UploadCoverImage"
+	InstanceService_ListCoverImages_FullMethodName       = "/memos.api.v1.InstanceService/ListCoverImages"
+	InstanceService_DeleteCoverImage_FullMethodName      = "/memos.api.v1.InstanceService/DeleteCoverImage"
 )
 
 // InstanceServiceClient is the client API for InstanceService service.
@@ -34,6 +38,12 @@ type InstanceServiceClient interface {
 	GetInstanceSetting(ctx context.Context, in *GetInstanceSettingRequest, opts ...grpc.CallOption) (*InstanceSetting, error)
 	// Updates an instance setting.
 	UpdateInstanceSetting(ctx context.Context, in *UpdateInstanceSettingRequest, opts ...grpc.CallOption) (*InstanceSetting, error)
+	// UploadCoverImage uploads a cover image to the server.
+	UploadCoverImage(ctx context.Context, in *UploadCoverImageRequest, opts ...grpc.CallOption) (*UploadCoverImageResponse, error)
+	// ListCoverImages lists previously uploaded cover images.
+	ListCoverImages(ctx context.Context, in *ListCoverImagesRequest, opts ...grpc.CallOption) (*ListCoverImagesResponse, error)
+	// DeleteCoverImage deletes a previously uploaded cover image.
+	DeleteCoverImage(ctx context.Context, in *DeleteCoverImageRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 }
 
 type instanceServiceClient struct {
@@ -74,6 +84,36 @@ func (c *instanceServiceClient) UpdateInstanceSetting(ctx context.Context, in *U
 	return out, nil
 }
 
+func (c *instanceServiceClient) UploadCoverImage(ctx context.Context, in *UploadCoverImageRequest, opts ...grpc.CallOption) (*UploadCoverImageResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UploadCoverImageResponse)
+	err := c.cc.Invoke(ctx, InstanceService_UploadCoverImage_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *instanceServiceClient) ListCoverImages(ctx context.Context, in *ListCoverImagesRequest, opts ...grpc.CallOption) (*ListCoverImagesResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListCoverImagesResponse)
+	err := c.cc.Invoke(ctx, InstanceService_ListCoverImages_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *instanceServiceClient) DeleteCoverImage(ctx context.Context, in *DeleteCoverImageRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, InstanceService_DeleteCoverImage_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // InstanceServiceServer is the server API for InstanceService service.
 // All implementations must embed UnimplementedInstanceServiceServer
 // for forward compatibility.
@@ -84,6 +124,12 @@ type InstanceServiceServer interface {
 	GetInstanceSetting(context.Context, *GetInstanceSettingRequest) (*InstanceSetting, error)
 	// Updates an instance setting.
 	UpdateInstanceSetting(context.Context, *UpdateInstanceSettingRequest) (*InstanceSetting, error)
+	// UploadCoverImage uploads a cover image to the server.
+	UploadCoverImage(context.Context, *UploadCoverImageRequest) (*UploadCoverImageResponse, error)
+	// ListCoverImages lists previously uploaded cover images.
+	ListCoverImages(context.Context, *ListCoverImagesRequest) (*ListCoverImagesResponse, error)
+	// DeleteCoverImage deletes a previously uploaded cover image.
+	DeleteCoverImage(context.Context, *DeleteCoverImageRequest) (*emptypb.Empty, error)
 	mustEmbedUnimplementedInstanceServiceServer()
 }
 
@@ -102,6 +148,15 @@ func (UnimplementedInstanceServiceServer) GetInstanceSetting(context.Context, *G
 }
 func (UnimplementedInstanceServiceServer) UpdateInstanceSetting(context.Context, *UpdateInstanceSettingRequest) (*InstanceSetting, error) {
 	return nil, status.Error(codes.Unimplemented, "method UpdateInstanceSetting not implemented")
+}
+func (UnimplementedInstanceServiceServer) UploadCoverImage(context.Context, *UploadCoverImageRequest) (*UploadCoverImageResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method UploadCoverImage not implemented")
+}
+func (UnimplementedInstanceServiceServer) ListCoverImages(context.Context, *ListCoverImagesRequest) (*ListCoverImagesResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListCoverImages not implemented")
+}
+func (UnimplementedInstanceServiceServer) DeleteCoverImage(context.Context, *DeleteCoverImageRequest) (*emptypb.Empty, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteCoverImage not implemented")
 }
 func (UnimplementedInstanceServiceServer) mustEmbedUnimplementedInstanceServiceServer() {}
 func (UnimplementedInstanceServiceServer) testEmbeddedByValue()                         {}
@@ -178,6 +233,60 @@ func _InstanceService_UpdateInstanceSetting_Handler(srv interface{}, ctx context
 	return interceptor(ctx, in, info, handler)
 }
 
+func _InstanceService_UploadCoverImage_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UploadCoverImageRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(InstanceServiceServer).UploadCoverImage(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: InstanceService_UploadCoverImage_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(InstanceServiceServer).UploadCoverImage(ctx, req.(*UploadCoverImageRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _InstanceService_ListCoverImages_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListCoverImagesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(InstanceServiceServer).ListCoverImages(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: InstanceService_ListCoverImages_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(InstanceServiceServer).ListCoverImages(ctx, req.(*ListCoverImagesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _InstanceService_DeleteCoverImage_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteCoverImageRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(InstanceServiceServer).DeleteCoverImage(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: InstanceService_DeleteCoverImage_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(InstanceServiceServer).DeleteCoverImage(ctx, req.(*DeleteCoverImageRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // InstanceService_ServiceDesc is the grpc.ServiceDesc for InstanceService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -196,6 +305,18 @@ var InstanceService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "UpdateInstanceSetting",
 			Handler:    _InstanceService_UpdateInstanceSetting_Handler,
+		},
+		{
+			MethodName: "UploadCoverImage",
+			Handler:    _InstanceService_UploadCoverImage_Handler,
+		},
+		{
+			MethodName: "ListCoverImages",
+			Handler:    _InstanceService_ListCoverImages_Handler,
+		},
+		{
+			MethodName: "DeleteCoverImage",
+			Handler:    _InstanceService_DeleteCoverImage_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
